--- a/MarcoPoloApp/app/src/main/res/drawable/rounded_layout.xml
+++ b/MarcoPoloApp/app/src/main/res/drawable/rounded_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/darkPoloRed"/>
+    <solid android:color="@color/streetGray"/>
     <corners android:radius="8dp"/>
 </shape>
+
