--- a/MarcoPoloApp/app/src/main/res/layout/notifications.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notifications.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/red_bubble">
+    android:background="@drawable/brighter_red_bubble">
 
     <!--<Spinner android:id="@+id/spinGroup"
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
         android:layout_height="260dp"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:background="@color/streetGray"
+        android:background="@drawable/rounded_layout"
         android:orientation="vertical">
 
         <TextView
