--- a/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_maps.xml
@@ -113,7 +113,7 @@
 
         <Button
             android:id="@+id/btn_marco"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -125,13 +125,5 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     </RelativeLayout>
-
-    <!--<android.support.design.widget.NavigationView
-        android:id="@+id/main_drawer"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        app:menu= "@menu/navigation_menu"
-        android:layout_gravity="start">
-    </android.support.design.widget.NavigationView>-->
 
 </android.support.v4.widget.DrawerLayout>
