--- a/MarcoPoloApp/app/src/main/res/layout/notifications.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notifications.xml
@@ -29,7 +29,7 @@
         android:layout_height="260dp"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/rounded_layout"
+        android:background="@color/streetGray"
         android:orientation="vertical">
 
         <TextView
