--- a/MarcoPoloApp/app/src/main/res/layout/dialog_select_search_results.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/dialog_select_search_results.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+
     <TextView
         android:id="@+id/txt_friend_name"
         android:layout_width="wrap_content"
@@ -24,18 +25,18 @@
             android:id="@+id/btn_unfriend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="@drawable/red_button"
-            android:text="unfriend" />
+            android:background="@drawable/marco_button"
+            android:text="Add friend" />
 
         <Button
             android:id="@+id/btn_block"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
@@ -43,21 +44,5 @@
             android:background="@drawable/red_button"
             android:text="block" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_marco_in_friendslist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/marco_button"
-        android:onClick="onClickBtnMarco"
-        android:text="@string/marco"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/white" />
 
 </LinearLayout>
