--- a/MarcoPoloApp/app/src/main/res/layout/dialog_select_friends.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/dialog_select_friends.xml
@@ -12,6 +12,7 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:text="User"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -29,7 +30,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/red_button"
-            android:text="unfriend" />
+            android:text="unfriend"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_block"
@@ -41,7 +43,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/red_button"
-            android:text="block" />
+            android:text="block"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <Button
