--- a/MarcoPoloApp/app/src/main/res/layout/dialog_select_search_results.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/dialog_select_search_results.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:text="User"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -30,7 +31,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/marco_button"
-            android:text="Add friend" />
+            android:text="Add friend"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_block"
@@ -42,7 +44,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/red_button"
-            android:text="block" />
+            android:text="block"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 </LinearLayout>
