--- a/MarcoPoloApp/app/src/main/res/layout/dialog_select_unblock.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/dialog_select_unblock.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:text="User"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -27,6 +28,7 @@
         android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:background="@drawable/red_button"
-        android:text="unblock" />
+        android:text="unblock"
+        android:textColor="@color/white" />
 
 </LinearLayout>
