--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -22,8 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="160sp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/marco_title"
-        android:layout_marginTop="87dp"
+        android:layout_below="@+id/message"
+        android:layout_marginTop="17dp"
         android:background="@color/streetGray"
         android:gravity="top|start"
         android:hint="@string/marco_message_hint"
@@ -75,22 +75,6 @@
         android:layout_marginTop="10dp"
         android:text="@string/marco_friends_list"
         android:visibility="gone" />
-
-    <ScrollView
-        android:id="@+id/friends_list"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_below="@+id/textView1">
-
-        <LinearLayout
-            android:id="@+id/check_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
-
-        </LinearLayout>
-    </ScrollView>
 
     <TextView
         android:id="@+id/sender"
