--- a/MarcoPoloApp/app/src/main/res/layout/notifications.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notifications.xml
@@ -25,11 +25,12 @@
         android:textSize="30sp"/>-->
 
     <LinearLayout
+        android:id="@+id/notification_outer_layout"
         android:layout_width="250dp"
         android:layout_height="260dp"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/rounded_layout"
+        android:layout_marginTop="20dp"
+        android:background="@color/streetGray"
         android:orientation="vertical">
 
         <TextView
