--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/grassGreen">
+    android:background="@color/streetGray">
 
     <TextView
         android:id="@+id/marco_title"
@@ -17,13 +17,47 @@
         android:textColor="@color/white"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/marcoText"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/marco_friends_list"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/sender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/marco_title"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
+        android:layout_toEndOf="@+id/textView1"
+        android:text="Sender:" />
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/marco_title"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/textView1"
+        android:text="Message:" />
+
     <EditText
         android:id="@+id/poloText"
         android:layout_width="match_parent"
         android:layout_height="160sp"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/message"
+        android:layout_above="@+id/button_bar"
         android:layout_marginTop="17dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:background="@color/streetGray"
         android:gravity="top|start"
         android:hint="@string/marco_message_hint"
@@ -63,37 +97,5 @@
             android:textAllCaps="false"
             android:textColor="@color/white" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/marcoText"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/marco_friends_list"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/sender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/marco_title"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/textView1"
-        android:text="Sender:" />
-
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/marco_title"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="40dp"
-        android:layout_toEndOf="@+id/textView1"
-        android:text="Message:" />
 
 </RelativeLayout>
