Search activity now shows spinning progress bar while it's searching and displays error message if no one was found.

--- a/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_settings.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/streetGray">
 
     <ImageView
         android:id="@+id/settings_profile_pic"
@@ -129,14 +129,14 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:background="@color/white">
+        android:background="@color/streetGray">
         <TextView
             android:id="@+id/my_marco_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:layout_marginStart="3dp"
-            android:background="@color/white"/>
+            android:background="@color/streetGray"/>
     </ScrollView>
     </RelativeLayout>
 
