--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginTop="13dp"
         android:layout_toEndOf="@+id/textView1"
-        android:text="Sender:" />
+        android:text="@string/sender" />
 
     <TextView
         android:id="@+id/message"
@@ -47,7 +47,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/textView1"
-        android:text="Message:" />
+        android:text="@string/message" />
 
     <EditText
         android:id="@+id/poloText"
