--- a/MarcoPoloApp/app/src/main/res/layout/activity_quick_marco.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_quick_marco.xml
@@ -19,10 +19,13 @@
 
     <EditText
         android:id="@+id/message_text"
-        android:layout_width="220sp"
+        android:layout_width="match_parent"
         android:inputType="none"
-        android:layout_height="50sp"
-        android:layout_marginTop="50sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/marco_title"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
         android:maxLength="255"
         android:layout_centerHorizontal="true"
         android:background="@color/streetGray"
@@ -32,10 +35,13 @@
 
     <EditText
         android:id="@+id/marcoText"
-        android:layout_width="220sp"
+        android:layout_width="match_parent"
         android:layout_height="160sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="110dp"
+        android:layout_below="@+id/message_text"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="10sp"
         android:maxLength="252"
         android:background="@color/streetGray"
         android:gravity="top|start"
